--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <div class="field">
-        <img src="image/ceat_cb_00003_large_1-removebg-preview.png" alt="" class="bat">
+        <img src="image/bat.png" alt="" class="bat">
+        
+        <div class="ball">
+
+        </div>
     </div>
 </body>
 </html>
